--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a href="#" class="button button-navigation">ХОЧУ СЮДА!</a>
+              <a href="#" class="button button-small button-navigation">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -57,11 +57,11 @@
             <li class="breadcrumbs-item">
               <a href="index.html" class="breadcrumbs-link">
                 <span class="visually-hidden">Главная</span>
-                <img src="images/icon-home.svg" alt="Главная" class="main-icon-home" width="12" height="12">
+                <img src="images/icons main/icon-home.svg" alt="Главная" class="main-icon-home" width="12" height="12">
               </a>
             </li>
             <li class="breadcrumbs-item">
-                <img src="images/icon-breadcrumbs-arrow.svg" alt="Далее" class="main-icon-home" width="6.39" height="9.94">
+                <img src="images//icons main/icon-breadcrumbs-arrow.svg" alt="Далее" class="main-icon-home" width="6.39" height="9.94">
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Гостиницы</a>
@@ -132,8 +132,8 @@
               <input type="range" min="0" max="10" class="range-filter">
               </label>
             </fieldset>
-            <button class="button button-filter" type="submit">Применить</button>
-            <button class="button button-reset" type="reset">Сбросить</button>
+            <button class="button button-small button-filter" type="submit">Применить</button>
+            <button class="button button-small button-reset" type="reset">Сбросить</button>
           </form>
         </div>
 
@@ -176,8 +176,8 @@
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 4000 ₽</span>
-              <a href="#" class="hotels-card-button button-more">подробнее</a>
-              <button class="hotels-card-button button-favorite">в избранное</button>
+              <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
+              <button class="button button-small hotels-card-button button-favorite">в избранное</button>
               <div>
                 <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
                 <span class="hotels-card-raiting">Рейтинг: 8,5</span>
@@ -190,8 +190,8 @@
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 5000 ₽</span>
-              <a href="#" class="hotels-card-button button-more">подробнее</a>
-              <button class="hotels-card-button button-favorite button-favorite-active">в избранном</button>
+              <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
+              <button class="button button-small hotels-card-button button-favorite button-favorite-active">в избранном</button>
               <div>
                 <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
                 <span class="hotels-card-raiting">Рейтинг: 9,2</span>
@@ -204,8 +204,8 @@
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 2500 ₽</span>
-              <a href="#" class="hotels-card-button button-more">подробнее</a>
-              <button class="hotels-card-button button-favorite">в избранное</button>
+              <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
+              <button class="button button-small hotels-card-button button-favorite">в избранное</button>
               <div>
                 <img src="images/hotels-raiting/star-3.svg" alt="Кол-во звезд у гостиницы 3" class="hotels-card-stars" width="140" height="37">
                 <span class="hotels-card-raiting">Рейтинг: 6,9</span>
@@ -218,8 +218,8 @@
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 1500 ₽</span>
-              <a href="#" class="hotels-card-button button-more">подробнее</a>
-              <button class="hotels-card-button button-favorite">в избранное</button>
+              <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
+              <button class="button button-small hotels-card-button button-favorite">в избранное</button>
               <div>
                 <img src="images/hotels-raiting/star-2.svg" alt="Кол-во звезд у гостиницы 2" class="hotels-card-stars" width="140" height="37">
                 <span class="hotels-card-raiting">Рейтинг: 5,0</span>
@@ -255,7 +255,7 @@
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden">Email</label>
             <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
-            <button class="subscribe-button" type="submit">Подписаться</button>
+            <button class="button button-big subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
