--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class="visually-hidden">Причины</h2>
           <ul class="reasons-list">
             <li class="reasons-item bg-basic">
-              <h3 class="reasons-title">Настоящий городок</h3>
+              <h3 class="reasons-title w">Настоящий городок</h3>
               <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="reasons-item reasons-image bg-basic">
@@ -84,7 +84,7 @@
               <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
             </li>
             <li class="reasons-item bg-basic">
-              <h3 class="reasons-title">Там есть мост дьявола</h3>
+              <h3 class="reasons-title w">Там есть мост дьявола</h3>
               <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
           </ul>
