--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/normalize.css">
     <title>HTML Academy: Седона - Главная</title>
   </head>
 
@@ -51,121 +51,125 @@
         </nav>
       </header>
 
-      <main class="main-index">
-        <section class="main-intro">
-          <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-          <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="welcome-title" width="458" height="352">
-        </section>
-        <section class="reasons">
-          <h2 class="intro-title">Седона — небольшой городок в Аризоне,
-            заслуживающий большего!</h2>
-            <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          <h2 class="visually-hidden">Причины</h2>
-          <ul class="reasons-list">
-            <li class="reasons-item bg-basic">
-              <h3 class="reasons-title w">Настоящий городок</h3>
-              <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            </li>
-            <li class="reasons-item reasons-image bg-basic">
-              <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
-            </li>
-            <li class="reasons-item bg-sec-1">
-              <h3 class="reasons-title">Небольшая площадь</h3>
-              <p class="reasons-description">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="reasons-item bg-sec-2">
-              <h3 class="reasons-title">Красивая дорога</h3>
-              <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="reasons-item bg-sec-1">
-              <h3 class="reasons-title">Мало туристов</h3>
-              <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-            <li class="reasons-item reasons-image bg-basic">
-              <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
-            </li>
-            <li class="reasons-item bg-basic">
-              <h3 class="reasons-title w">Там есть мост дьявола</h3>
-              <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            </li>
-          </ul>
-          <ul class="reasons-list">
-            <li class="reasons-item bg-sec-1">
-              <img src="images/reason/reason-icon-home.svg" alt="Жильё" class="reason-icon" width="75" height="72">
-              <h3 class="reasons-title">Жильё</h3>
-              <p class="reasons-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </li>
-            <li class="reasons-item">
-              <img src="images/reason/reason-icon-food.svg" alt="Еда" class="reason-icon" width="75" height="72">
-              <h3 class="reasons-title">Еда</h3>
-              <p class="reasons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="reasons-item bg-sec-1">
-              <img src="images/reason/reason-icon-gift.svg" alt="Сувениры" class="reason-icon" width="75" height="72">
-              <h3 class="reasons-title">Сувениры</h3>
-              <p class="reasons-description">Не только китайского, но и настоящего местного производства!</p>
-            </li>
-          </ul>
-        </section>
-        <section class="interested">
-          <h2 class="interested-title">Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a href="catalog.html" class="button button-big button-search">Поиск гостиницы в Седоне</a>
-        </section>
-        <section class="subscribe">
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden">Email</label>
-            <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
-            <button class="button button-big subscribe-button" type="submit">Подписаться</button>
-          </form>
-        </section>
+      <main class="main-index main-container">
+        <div class="page-container">
+          <section class="main-intro">
+            <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+            <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="logo-welcome-title" width="458" height="352">
+          </section>
+          <section class="reasons">
+            <h2 class="intro-title">Седона — небольшой городок в Аризоне,
+              заслуживающий большего!</h2>
+              <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+            <h2 class="visually-hidden">Причины</h2>
+            <ul class="reasons-list">
+              <li class="reasons-item bg-basic">
+                <h3 class="reasons-title white">Настоящий городок</h3>
+                <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </li>
+              <li class="reasons-item reasons-image bg-basic">
+                <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
+              </li>
+              <li class="reasons-item bg-sec-1">
+                <h3 class="reasons-title">Небольшая площадь</h3>
+                <p class="reasons-description">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="reasons-item bg-sec-2">
+                <h3 class="reasons-title">Красивая дорога</h3>
+                <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="reasons-item bg-sec-1">
+                <h3 class="reasons-title">Мало туристов</h3>
+                <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+              <li class="reasons-item reasons-image bg-basic">
+                <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
+              </li>
+              <li class="reasons-item bg-basic">
+                <h3 class="reasons-title white">Там есть мост дьявола</h3>
+                <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </li>
+            </ul>
+            <ul class="reasons-list">
+              <li class="reasons-item bg-sec-1">
+                <img src="images/reason/reason-icon-home.svg" alt="Жильё" class="reason-icon" width="75" height="72">
+                <h3 class="reasons-title">Жильё</h3>
+                <p class="reasons-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="reasons-item">
+                <img src="images/reason/reason-icon-food.svg" alt="Еда" class="reason-icon" width="75" height="72">
+                <h3 class="reasons-title">Еда</h3>
+                <p class="reasons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="reasons-item bg-sec-1">
+                <img src="images/reason/reason-icon-gift.svg" alt="Сувениры" class="reason-icon" width="75" height="72">
+                <h3 class="reasons-title">Сувениры</h3>
+                <p class="reasons-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
+          </section>
+          <section class="interested">
+            <h2 class="interested-title">Заинтересовались?</h2>
+            <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a href="catalog.html" class="button button-big button-search">Поиск гостиницы в Седоне</a>
+          </section>
+          <section class="subscribe">
+            <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden">Email</label>
+              <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
+              <button class="button button-big subscribe-button" type="submit">Подписаться</button>
+            </form>
+          </section>
+        </div>
       </main>
 
       <footer class="page-footer">
-        <section class="footer-socials">
-          <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy" class="button-socials">
-                <span class="visually-hidden">Vkontakte</span>
-                <svg width="25" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" fill="#83B3D3"/>
+        <div class="page-footer-container">
+          <section class="footer-socials">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a href="https://vk.com/htmlacademy" class="button-socials">
+                  <span class="visually-hidden">Vkontakte</span>
+                  <svg width="25" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" fill="#83B3D3"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://t.me/htmlacademy " class="button-socials">
+                  <span class="visually-hidden">Telegram</span>
+                  <svg width="18" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
+                  <span class="visually-hidden">YouTube</span>
+                  <svg width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" fill="#83B3D3"/>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-phone">
+            <h2 class="visually-hidden">Контактный номер</h2>
+            <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
+          </section>
+          <section class="footer-about-text">
+            <h2 class="visually-hidden">Сделано в HTML Academy</h2>
+              <a href="https://htmlacademy.ru/">
+                <svg width="115" height="34" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)" fill="#000">
+                  <path d="M0 13.3v2.6h2.5v-2.6H0Zm11.6-8.4c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5Zm15 .3h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3Zm6.7 8c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13Zm-18.9 7a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6Zm19.9-1.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(0 .4)" d="M0 0h115v33H0z"/></clipPath></defs>
                 </svg>
               </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="https://t.me/htmlacademy " class="button-socials">
-                <span class="visually-hidden">Telegram</span>
-                <svg width="18" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
-                <span class="visually-hidden">YouTube</span>
-                <svg width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" fill="#83B3D3"/>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <section class="footer-phone">
-          <h2 class="visually-hidden">Контактный номер</h2>
-          <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
-        </section>
-        <section class="footer-about-text">
-          <h2 class="visually-hidden">Сделано в HTML Academy</h2>
-            <a href="https://htmlacademy.ru/">
-              <svg width="115" height="34" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)" fill="#000">
-                <path d="M0 13.3v2.6h2.5v-2.6H0Zm11.6-8.4c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5Zm15 .3h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3Zm6.7 8c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13Zm-18.9 7a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6Zm19.9-1.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(0 .4)" d="M0 0h115v33H0z"/></clipPath></defs>
-              </svg>
-            </a>
-        </section>
+          </section>
+        </div>
       </footer>
-  </div>
+    </div>
   </body>
 </html>
