--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a href="index.html" class="navigation-logo">
-            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="140" height="70">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона." class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -60,11 +60,11 @@
                 <li class="breadcrumbs-item">
                   <a href="index.html" class="breadcrumbs-link">
                     <span class="visually-hidden">Главная</span>
-                    <img src="images/icons main/icon-home.svg" alt="Главная" class="breadcrumbs-icon" width="13" height="15">
+                    <img src="images/icons main/icon-home.svg" alt="Главная." class="breadcrumbs-icon" width="13" height="15">
                   </a>
                 </li>
                 <li class="breadcrumbs-item">
-                    <img src="images//icons main/icon-breadcrumbs-arrow.svg" alt="Далее" class="breadcrumbs-icon" width="6.39" height="9.94">
+                    <img src="images//icons main/icon-breadcrumbs-arrow.svg" alt="Далее." class="breadcrumbs-icon" width="6.39" height="9.94">
                 </li>
                 <li class="breadcrumbs-item">
                   <a class="breadcrumbs-link">Гостиницы</a>
@@ -147,7 +147,7 @@
 
           <!-- SEARCH RESULTS -->
           <section class="search-results">
-            <div class="sorting">
+            <div class="sorting-container">
               <div class="search-results-header">
                 <h2>Найдено гостиниц: 38</h2>
               </div>
@@ -182,7 +182,7 @@
               <ul class="search-results-hotels-card">
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link">
-                    <img src="images/hotels-raiting/hotel-1.jpg" alt="Amara Resort & Spa" class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-1.jpg" alt="Amara Resort & Spa." class="hotels-card-image" width="300" height="212">
                     <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
@@ -190,13 +190,13 @@
                   <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
                   <button class="button button-small hotels-card-button button-favorite">в избранное</button>
                   <div>
-                    <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
+                    <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4." class="hotels-card-stars" width="140" height="37">
                     <span class="hotels-card-raiting">Рейтинг: 8,5</span>
                   </div>
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link">
-                    <img src="images/hotels-raiting/hotel-2.jpg" alt="Villas at Poco Diablo" class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-2.jpg" alt="Villas at Poco Diablo." class="hotels-card-image" width="300" height="212">
                     <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
@@ -204,13 +204,13 @@
                   <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
                   <button class="button button-small hotels-card-button button-favorite button-favorite-active">в избранном</button>
                   <div>
-                    <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
+                    <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4." class="hotels-card-stars" width="140" height="37">
                     <span class="hotels-card-raiting">Рейтинг: 9,2</span>
                   </div>
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link">
-                    <img src="images/hotels-raiting/hotel-3.jpg" alt="Desert Quail Inn" class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-3.jpg" alt="Desert Quail Inn." class="hotels-card-image" width="300" height="212">
                     <h3 class="hotels-card-title">Desert Quail Inn</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
@@ -218,13 +218,13 @@
                   <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
                   <button class="button button-small hotels-card-button button-favorite">в избранное</button>
                   <div>
-                    <img src="images/hotels-raiting/star-3.svg" alt="Кол-во звезд у гостиницы 3" class="hotels-card-stars" width="140" height="37">
+                    <img src="images/hotels-raiting/star-3.svg" alt="Кол-во звезд у гостиницы 3." class="hotels-card-stars" width="140" height="37">
                     <span class="hotels-card-raiting">Рейтинг: 6,9</span>
                   </div>
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link">
-                    <img src="images/hotels-raiting/hotel-4.jpg" alt="GreenTree Inn" class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-4.jpg" alt="GreenTree Inn." class="hotels-card-image" width="300" height="212">
                     <h3 class="hotels-card-title">GreenTree Inn</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
@@ -232,7 +232,7 @@
                   <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
                   <button class="button button-small hotels-card-button button-favorite">в избранное</button>
                   <div>
-                    <img src="images/hotels-raiting/star-2.svg" alt="Кол-во звезд у гостиницы 2" class="hotels-card-stars" width="140" height="37">
+                    <img src="images/hotels-raiting/star-2.svg" alt="Кол-во звезд у гостиницы 2." class="hotels-card-stars" width="140" height="37">
                     <span class="hotels-card-raiting">Рейтинг: 5,0</span>
                   </div>
                 </li>
