--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a href="index.html" class="navigation-logo">
-            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="140" height="70">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона." class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -55,7 +55,7 @@
         <div class="page-container">
           <section class="main-intro">
             <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-            <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="logo-welcome-title" width="458" height="352">
+            <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona." class="logo-welcome-title" width="458" height="352">
           </section>
           <section class="reasons">
             <h2 class="intro-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
@@ -68,7 +68,7 @@
                   <p class="reasons-description">Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
                 </div>
                 <div class="reasons-item reasons-image bg-basic">
-                  <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
+                  <img src="images/reason/reason-1.jpg" alt="Настоящий городок." class="reason-img" width="800" height="384">
                 </div>
               </li>
               <li class="reasons-item bg-sec-1">
@@ -85,7 +85,7 @@
               </li>
               <li class="reasons-list-row">
                 <div class="reasons-item reasons-image bg-basic">
-                  <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
+                  <img src="images/reason/reason-2.jpg" alt="Мост дьявола." class="reason-img" width="800" height="384">
                 </div>
                 <div class="reasons-item bg-basic">
                   <h3 class="reasons-title white">Там есть<br> мост дьявола</h3>
@@ -95,17 +95,17 @@
             </ul>
             <ul class="reasons-list">
               <li class="reasons-item bg-sec-1">
-                <img src="images/reason/reason-icon-home.svg" alt="Жильё" class="reason-icon" width="75" height="72">
+                <img src="images/reason/reason-icon-home.svg" alt="Жильё." class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Жильё</h3>
                 <p class="reasons-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </li>
               <li class="reasons-item">
-                <img src="images/reason/reason-icon-food.svg" alt="Еда" class="reason-icon" width="75" height="72">
+                <img src="images/reason/reason-icon-food.svg" alt="Еда." class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Еда</h3>
                 <p class="reasons-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
               </li>
               <li class="reasons-item bg-sec-1">
-                <img src="images/reason/reason-icon-gift.svg" alt="Сувениры" class="reason-icon" width="75" height="72">
+                <img src="images/reason/reason-icon-gift.svg" alt="Сувениры." class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Сувениры</h3>
                 <p class="reasons-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
               </li>
